# cli-tools

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  csv_parser.py  grep_clone.py  habit_tracker.py  habit_tracker_README.md  json_parser.py  pyproject.toml
.github/workflows/: ci.yml
examples/: sample.csv  sample.json  sample.py  sample.txt
tests/: test_file_compressor.py  test_grep_clone.py  test_json_parser.py
